--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -70,7 +70,7 @@ home:
   blockchain4: 主节点
   privacyin1: Firo's Elysium tokenization layer allows users to create their own privacy-enabled tokens with use-cases from private stablecoins or voting tokens and in the future offer privacy for bridged assets from other chains.
   randd: 研究与开发
-  randd1: Firo stands out as one out of a handful of projects that contribute independent research to blockchain privacy and decentralization technologies  such as Sigma, Lelantus, Lelantus Spark and MTP Our work has played a pivotal role in the space having influenced or been adopted in other projects.
+  randd1: Firo stands out as one out of a handful of projects that contribute independent research to blockchain privacy and decentralization technologies  such as Sigma, Lelantus, Lelantus Spark and MTP. Our work has played a pivotal role in the space having influenced or been adopted in other projects.
   getfiro: 获取 Firo
   getfiro1: 挺进数字隐私的前沿。立即加入 Firo 生态系统。
   getfiro2: 获取钱包
