Update zh-cn translation

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -214,6 +214,10 @@ team:
     name: Ajaydono
     title: Support
     bio: Ajay assists the Project Steward in day-to-day operations as well as support enquiries. He has a Diploma in Information Technology majoring in Database Administration and has several years of experience of IT technical support.
+  lucasfullam:
+    name: Lucas Fullam
+    title: Community Manager
+    bio: Lucas Fullam has a history of working customer focused jobs in the past ranging from customer service representative to event setups at venues and conferences. He first heard about cryptocurrency back in 2012, but did not truly delve into until well into 2017 when one of his friends brought him deeper into the world of crypto where he finally got to see how much potential there was. One thing led to another and finally he found Firo and the rest is history.
   michaelmugglesbernhardt:
     name: Michael 'Muggles' Bernhardt
     title: Community Manager
