--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -288,7 +288,7 @@ roadmap:
   
 merchants:
   heading: Merchants
-  predisclaimer: Disclaimer&#58;&nbsp;
+  predisclaimer: Disclaimer
   disclaimer: Some of these links contain referral links whereby we may receive compensation when you sign-up or use their products/services. These do not constitute an endorsement of the product/service.
   introduction: Want to spend your Firo? Here are some places you can do so! This is a non-exhaustive list of places that accept Firo! If you have a business that would like to be featured here, let us know!
   button1: Apparel
