--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -123,7 +123,7 @@ download:
 buyfiro:
   heading: Buy Firo
   heading2: One of the ways to get Firo is to acquire it on one of the exchanges. Below you will find a list of exchanges and coin-swapping services that support Firo.
-  predisclaimer: Disclaimer
+  predisclaimer: Disclaimer&colon;&#x20;
   disclaimer: Some of these links contain referral links whereby the Firo core team may receive compensation when you sign-up or use their products/services. These do not constitute an endorsement of the product/service.
   ff: "Firo / Fiat"
   fc: "Firo / Crypto"
@@ -288,7 +288,7 @@ roadmap:
   
 merchants:
   heading: Merchants
-  predisclaimer: Disclaimer
+  predisclaimer: Disclaimer&colon;&#x20;
   disclaimer: Some of these links contain referral links whereby we may receive compensation when you sign-up or use their products/services. These do not constitute an endorsement of the product/service.
   introduction: Want to spend your Firo? Here are some places you can do so! This is a non-exhaustive list of places that accept Firo! If you have a business that would like to be featured here, let us know!
   button1: Apparel
