--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -4,7 +4,7 @@ global:
   yeth: "是"
   noo: "否"
   lelantus: Lelantus
-  title: Firo - 金融隐私焕新
+  title: Firo - 保护隐私的加密货币
 
 titles:
   home: 首页
@@ -55,8 +55,8 @@ footer:
   comm: 加入讨论
 
 home:
-  heading: 金融隐私焕新
-  heading2: Firo 是一种数字货币，专注于树立隐私标准。
+  heading: 隐私是同意
+  heading2: Firo 是一种保护隐私的加密货币和生态系统。
   cta1: 获取 Firo
   cta2: 了解更多
   privacy: 隐私
@@ -64,7 +64,7 @@ home:
   privacy2: 匿名集
   privacy3: 无预信任机制
   blockchain: 区块链
-  blockchain1: Firo 使用混合 PoW 和 LLMQ ChainLocks 系统，将供应的公平分发与对 51% 攻击的保护和交易的快速最终确定相结合。
+  blockchain1: Firo 使用混合 PoW 和 LLMQ ChainLocks 系统，将供应的公平分发与防止 51% 攻击以及区块和交易的快速最终确定相结合。
   blockchain2: 总供应量
   blockchain3: 工作量证明
   blockchain4: 主节点
@@ -124,7 +124,7 @@ buyfiro:
   heading: 买 Firo
   heading2: 获得 Firo 的方法之一是在其中一家交易所获得它。你将在下面找到支持 Firo 的交易所和币交换服务的列表。
   predisclaimer: 免责声明：
-  disclaimer: 其中一些链接包含推荐链接，当你注册或使用他们的产品/服务时，我们可能会得到补偿。这些不构成对产品/服务的认可。
+  disclaimer: 其中一些链接包含推荐链接，当你注册或使用他们的产品/服务时，Firo 核心团队可能会得到补偿。这些不构成对产品/服务的认可。
   ff: "Firo / 法定货币"
   fc: "Firo / 加密货币"
   cs: "币交换服务"
@@ -145,11 +145,11 @@ tech:
   lelantus1: Lelantus 技术
   lelantus2: Lelantus 是 Firo 的 Aram Jivanyan 开发的下一代隐私协议。Lelantus 允许你烧掉你的币，它将币隐藏在一个超过 65000 个的匿名集中。接收者可以从这个匿名池中赎回它，它打破了你的交易和之前所有交易的链接。
   sigma1: Sigma 技术
-  sigma2: 我们相信区块链的最终目的是建立不需要信任的系统，并且同样的原则也适用于我们的隐私系统本身。这就是为什么我们在 2018 年为 Zcoin 构建 Sigma 的原因。Sigma 使用 256 位 ECC 曲线，证明大小仅为 1.5 kB，是当时技术的 17 倍改进。Sigma 是 Lelantus 的前身，为我们今天的地位奠定了许多垫脚石。
+  sigma2: 我们相信区块链的所有目的最终都是为了建立不需要信任的系统，并且同样的原则也适用于我们的隐私系统。这就是为什么我们在 2018 年为 Zcoin 构建 Sigma 的原因，它消除了 Zerocoin 中预信任机制的要求。Sigma 使用 256 位 ECC 曲线，证明大小仅为 1.5 kB，是当时技术的 17 倍改进。Sigma 是 Lelantus 的前身，为我们今天的成就奠定了许多垫脚石。
   dandelion1: Dandelion 技术
   dandelion2: Dandelion++ 保护你的 IP 地址。在 Firo 交易广播到整个网络之前，它们会在节点之间随机洗牌几步。这样，广播的来源就与你的 IP 地址解除了关联。
   mtp1: 分散和公平的安全
-  mtp2: Firo 的默克尔树证明（MTP）挖矿算法进一步增强了交易的实用匿名性。MTP 占用大量内存，阻止了矿工集中化。但是，普通节点可以绕过此内存要求。2017 年由 Zcoin 发起的审计证明了这种两管齐下的方法的有效性。
+  mtp2: Firo 的默克尔树证明（MTP）挖矿算法旨在使挖矿民主化。MTP 算法是内存密集型的，增加了构建 ASIC 的成本，并保持链可通过 GPU 等商品硬件进行挖矿。而节点可以绕过这种内存要求，有效地验证这些证明。2017 年 Firo 赞助的审计证明了这种双管齐下的方法的有效性。此后，MTP 已被 FiroPoW 取代，FiroPoW 具有更小的证明和额外的抗 ASIC 策略。
 
 team:
   heading: 团队
@@ -244,36 +244,44 @@ team:
     bio: Tigran 拥有信息学和应用数学以及计算机和信息科学的硕士学位。他目前正在埃里温国立大学攻读信息学和应用数学的博士学位。
 
 roadmap:
+  aura: Aura 隐私投票 (定稿论文中)
+  auradesc: Aura 是我们为 DAO 提供的隐私投票机制，其灵感来自于我们的 Lelantus 技术，它允许匿名但可验证的投票，同时隐藏投票进度。我们打算以此为基础，朝着正式的去中心化治理迈进。
+  avalanche: Avalanche
+  avalanchedesc: Avalanche 是一种共识算法，可以实现即时交易，增强安全性和无分叉升级。我们正在探索将 Avalanche 共识作为我们主节点的潜在替代品。
   development: 开发
   heading: 路线图
-  znodes: 确定性主节点
-  mnodesq: 长效主节点仲裁链
-  rebrand: 品牌重塑
-  lelantus: Lelantus 激活
+  mnodes: 确定性主节点（已完成）
+  mnodesq: 长效主节点仲裁链（已完成）
+  rebrand: 品牌重塑（已完成）
+  lelantus: Lelantus 激活（已完成）
   lelantusdesc: Lelantus 是我们的下一代隐私协议，它提供了最高级别的实用隐私，无预信任机制，只依赖可靠的密码学假设。Lelantus 支持的匿名集比其他无预信任机制的隐私系统大几个数量级。
-  chainlocks: ChainLocks
+  chainlocks: ChainLocks（已完成）
   chainlocksdesc: ChainLocks 利用 Firo 的主节点网络来防止 51% 攻击。只要确认 1 个区块，交易就实现最终确定性。
-  rap: RAP 地址
+  rap: RAP 地址（已完成）
   rapdesc: RAP 地址允许一个可公开分享的地址，不允许第三方看到它收到了多少资金或何时收到资金。
-  instant: 即时发送
+  instant: 即时发送（已完成）
   instantdesc: 即时发送利用 Firo 的主节点网络，使交易在几秒钟内得到确认，从而可以作为一种交换媒介实际使用。
-  elysium: Elysium（进行中）
+  elysium: Elysium（在测试网上）
   elysiumdesc: Elysium 允许在 Firo 的网络上发行代币（如稳定币、资产支持币），将受益于 Firo 的隐私技术。
-  lelantusspark: Lelantus Spark（正在接受同行评审）
-  lelantussparkdesc: Lelantus Spark 允许直接匿名支付，允许用户在不透露金额、来源和收款方的情况下相互交易。Spark 引入了一个新的地址系统，将允许用户完全隐藏他们的资金。
-  mobile: 手机钱包（进行中）
+  elysiumv2: Elysium v2
+  elysiumv2desc: Elysium v2 扩展了 Elysium 的功能，使其更容易实现桥接和 DeFi 功能。Elysium v2 还将实现 Spats，隐藏传输的资产类型。
+  lelantusspark: Lelantus Spark（进行中）
+  lelantussparkdesc: Lelantus Spark 允许直接匿名支付，允许用户在不透露金额、来源和接收方的情况下相互交易。Spark 引入了一个 Spark 地址，允许用户将他们的资金完全隐藏起来，同时还支持全查看密钥和阈值多重签名。
+  mobile: 手机钱包（已完成）
   mobiledesc: 一个原生的、默认隐私手机钱包，将有完整的 Lelantus 交易支持。
-  progpow: FiroPoW
-  progpowdesc: 为了进一步提高 ASIC 抗性，ProgPoW 变体将取代 MTP。这也将允许更小的区块，减少所有节点所需的带宽和存储。
+  firopow: FiroPoW（已完成）
+  firopowdesc: FiroPoW 是 ProgPoW 的一个变体，是为 GPU 设计的，具有很强的抗 ASIC 能力。
   research: 研究
-  lelantussparkaddress: Lelantus Spark 的子地址和付款证明
-  lelantussparkaddressdesc: 我们正在研究向 Lelantus Spark 添加子地址的方法，这将允许更高效的扫描和支付证明，让用户能够证明他们已付款。
-  atomicdex: AtomicDEX
-  atomicdexdesc: AtomicDEX 允许用户使用原子交换技术的去中心化基础设施与 Firo 进行交换。
+  lelantussparkaddress: Lelantus Spark 的子地址和付款证明（已完成）
+  lelantussparkaddressdesc: Lelantus Spark 将支持子地址，允许更高效的扫描和付款证明，允许用户证明他们已付款。
+  firodex: FiroDEX（已完成）
+  firodexdesc: FiroDEX 允许用户使用原子交换技术的去中心化基础设施与 Firo 进行交换。
   bridges: 跨链桥
   bridgesdesc: 跨链桥将允许来自其他生态系统的代币桥接进出 Firo 的 Elysium 代币层，以利用我们的隐私基础设施。
   mixnets: 混合网
-  mixnetsdesc: 将交易和节点通信穿插到混合网中，即使是面对国家级别的对手，也能提供更多的元数据保护。
+  mixnetsdesc: 将交易和节点通信接入混合网，即使面对国家层面的对手，也能提供更多的元数据保护。我们正在研究基于 Katzenpost 软件库的 Meson 混合网。
+  spats: Spark Assets（已完成）
+  spatsdesc: Spark Assets 扩展了 Spark 的功能，以隐藏传输的资产类型。Spats 计划在 Elysium v2 中实现。
   syncclients: 快速同步客户端
   syncclientsdesc: 快速同步客户端允许用户快速同步他们的钱包，而不需要下载整个区块链，同时支持 Lelantus 交易。
   learnmore: 了解更多
