Updates on Buy Firo, Social and Download pages

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -133,6 +133,7 @@ buyfiro:
   pairing: pairing
   fchead1: "firo / crypto"
   csservice: coin-swapping services
+  dex: dex
   liquidstaking: liquid staking
   
 tech:
