--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ paginate: 6
 paginate_path: "/blog/page:num/"
 
 # jekyll-multiple-languages-plugin settings:
-languages: ["en", "zh-cn"]
+languages: ["en", "zh-cn", "id"]
 exclude_from_localizations: ["img", "css", "fonts", "feed.xml", "_posts", "blog"]
