Fix formatting in translation

--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -60,8 +60,7 @@ home:
   cta1: Dapatkan Firo
   cta2: Pelajari Lebih Lanjut
   privacy: Privasi
-  privacy1: Firo berada di garis depan aset kripto privasi dengan Lelantus dan Lelantus Spark tanpa pengguna perlu mempercayai pihak sentral tertentu. Privasi pada blockchain dengan standar anonimitas yang tinggi. 
-Dandelion++ teknologi juga memberikan privasi pada lapisan-jaringan.
+  privacy1: Firo berada di garis depan aset kripto privasi dengan Lelantus dan Lelantus Spark tanpa pengguna perlu mempercayai pihak sentral tertentu. Privasi pada blockchain dengan standar anonimitas yang tinggi. Dandelion++ teknologi juga memberikan privasi pada lapisan-jaringan.
   privacy2: pengaturan anonimitas
   privacy3: aturan tanpa memerlukan kepercayaan terhadap pihak sentral manapun
   blockchain: Blockchain
